--- a/style.css
+++ b/style.css
@@ -133,33 +133,67 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   height: 0;
   clear: both; }
 
-.wrapper {
-  width: 800px; }
-
-.results a {
-  display: block;
-  float: left;
-  text-decoration: none;
-  color: orange;
-  font-size: 1.5em; }
-
-.list {
-  list-style: none; }
-
-.background {
+.cassette {
+  position: relative;
   background: url(images/tape2.svg);
   background-size: cover;
   background-position: center;
   height: 100vh;
   background-attachment: fixed;
-  padding: 0; }
+  padding: 0;
+  margin: 0; }
 
-.imputButton {
-  padding-left: 200px;
-  padding-top: 50px; }
-
-.title h3 {
-  font-size: 7em;
-  padding-top: 10%;
-  text-align: center;
+.results {
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 80%;
+  height: 25%;
+  padding-top: 3%;
   color: red; }
+  .results a {
+    color: yellow;
+    text-shadow: 3px 3px 3px black;
+    font-family: cursive;
+    font-weight: 200;
+    text-decoration: none; }
+    .results a li {
+      list-style: none;
+      font-size: 1.5em;
+      text-align: center;
+      line-height: 1.5em; }
+
+.band {
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+  padding-top: 1%; }
+  .band h1 {
+    color: yellow;
+    font-weight: 200;
+    text-align: center;
+    text-shadow: 1px 1px 1px white; }
+
+.input {
+  margin-left: 40%;
+  margin-right: 40%;
+  padding-top: 1%; }
+  .input input {
+    width: 100%; }
+
+.button {
+  padding-top: 2%;
+  margin-left: 40%;
+  margin-right: 40%; }
+  .button button {
+    width: 100%; }
+
+.title {
+  margin-top: -4%;
+  margin-left: 20%;
+  margin-right: 20%; }
+  .title h3 {
+    color: yellow;
+    font-weight: 200;
+    font-size: 7em;
+    text-align: center;
+    text-shadow: 2px 2px 3px white; }
